# okapi-rewrite

./: .codespellrc  .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Dockerfile.alpine  Dockerfile.debug  Dockerfile.fedora  README.md  config.example.json  test.py
.cargo/: config  config.toml
assets/images/: generate.sh  optimize.sh
assets/images/raw/: optimize.sh
src/: cache.rs  constants.rs  encoder.rs  error.rs  fetcher.rs  font.rs  genoverlay.rs  genprofile.rs  lib.rs  loaders.rs  main.rs  proxy.rs  resize.rs  routes.rs  webp.rs
src/routes/: adventures.rs  chess.rs  imageops.rs  index.rs  overlay.rs  profile.rs
