[package]
name = "okapi"
version = "1.1.0"
authors = ["Jens Reidel <jens@troet.org>"]
edition = "2021"

[dependencies]
ab_glyph = "0.2"
bytes = "1.0"
dashmap = "4.0"
env_logger = { version = "0.9", default-features = false, features = ["termcolor", "atty"] }
hyper = { version = "0.14", default-features = false, features = ["server", "client", "tcp", "http1", "http2"] }
hyper-proxy = { git = "https://github.com/Gelbpunkt/hyper-proxy", default-features = false, features = ["rustls-webpki"] }
image = { git = "https://github.com/Gelbpunkt/image.git", branch = "export-enlargeable", default-features = false, features = [
    "jpeg",
    "png"
] }
imageproc-lite = { git = "https://github.com/Gelbpunkt/imageproc-lite.git", default_features = false }
lazy_static = "1.4"
libc = { version = "0.2", default-features = false }
log = "0.4"
resvg = { version = "0.20", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread"] }
tiny-skia = { version = "0.6", default-features = false }
usvg = { version = "0.20", default-features = false }

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3
panic = "abort"
